tests/invalid/Final_Invalid_9.whiley
function f(int x) -> (int r):
    //
    final int y = 1
    //
    while x < 10:
        y = y + 1
    //
    return y